[Angelos Boules]: (Honors Submission) Fixed hidden email nudging on mobile screens

--- a/src/pages/RiskReport/RiskReport.module.css
+++ b/src/pages/RiskReport/RiskReport.module.css
@@ -386,7 +386,9 @@
   }
 
   .assigneeBlock {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
   }
 
   .bottleneck {
